Minor changes to previous commit

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -127,15 +127,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_hat, loss, cost = forward_pass(x, h, h_0, v, b, y_true, w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -148,6 +139,8 @@
     }
    ],
    "source": [
+    "y_hat, loss, cost = forward_pass(x, h, h_0, v, b, y_true, w)\n",
+    "\n",
     "# print the results\n",
     "print(\"The predicted value is y_hat = {}\".format(y_hat))\n",
     "print(\"The loss is {}\".format(loss))\n",
@@ -163,19 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grad_y_hat, grad_h, grad_w = backward_pass(x, y_true, y_hat)\n",
-    "\n",
-    "learning_rate = 0.1\n",
-    "w_new = update_weights(w, grad_w, learning_rate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +168,11 @@
     }
    ],
    "source": [
+    "grad_y_hat, grad_h, grad_w = backward_pass(x, y_true, y_hat)\n",
+    "\n",
+    "learning_rate = 0.1\n",
+    "w_new = update_weights(w, grad_w, learning_rate)\n",
+    "\n",
     "# print the results\n",
     "print(\"The new weight vector is {}\".format(w_new))"
    ]
@@ -200,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,10 +234,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final weight vector is tensor([13.6460, -7.0607])\n"
+     ]
     }
    ],
    "source": [
-    "PlotCost(costs)"
+    "PlotCost(costs)\n",
+    "print(\"The final weight vector is {}\".format(w))"
    ]
   }
  ],
