--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -9,15 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-04T14:45:27.685283300Z",
+     "start_time": "2023-11-04T14:45:24.863172100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
-    "\n",
+    "import pandas as pd\n",
     "# Ignore UserWarning\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)"
@@ -26,7 +31,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-04T14:42:53.259153100Z",
+     "start_time": "2023-11-04T14:42:53.166601600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Define function that implements the binary cross entropy loss function\n",
@@ -102,7 +112,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-04T14:42:58.120082800Z",
+     "start_time": "2023-11-04T14:42:58.001123400Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Defining the variables\n",
@@ -126,7 +141,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-04T14:43:03.477735700Z",
+     "start_time": "2023-11-04T14:43:03.413740200Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -157,7 +177,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-04T14:43:06.405356300Z",
+     "start_time": "2023-11-04T14:43:06.268354400Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -187,7 +212,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-04T14:43:25.640628200Z",
+     "start_time": "2023-11-04T14:43:08.802617500Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -251,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
