Print with final epoch's average loss (cost) implemented

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -113,6 +113,8 @@
     "        # Print progress\n",
     "        if i % 20 == 0:\n",
     "            print(\"Epoch {}: cost = {}\".format(i, cost_values[-1]))\n",
+    "\n",
+    "    print(\"Epoch {}: cost = {}\".format(i + 1, cost_values[-1]))\n",
     "    return cost_values, w, b, v\n",
     "\n",
     "\n",
@@ -261,7 +263,8 @@
       "Epoch 420: cost = 0.009716369211673737\n",
       "Epoch 440: cost = 0.009270377457141876\n",
       "Epoch 460: cost = 0.00886365957558155\n",
-      "Epoch 480: cost = 0.008491234853863716\n"
+      "Epoch 480: cost = 0.008491234853863716\n",
+      "Epoch 500: cost = 0.008165417239069939\n"
      ]
     }
    ],
