Function's names changed

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -38,41 +38,41 @@
    },
    "outputs": [],
    "source": [
-    "def binary_cross_entropy(y_true, y_hat):\n",
+    "def BCE_Loss(y_true, y_hat):\n",
     "    return -1 * (y_true * torch.log(y_hat) + (1 - y_true) * torch.log(1 - y_hat))\n",
     "\n",
     "\n",
-    "def forward_pass(x, t, h, h_0, v, b, y_true, w):\n",
-    "    h_value = lambda t: h_0 if t == 1 else h[0]\n",
-    "    h[t - 1] = torch.matmul(w.T, x[t - 1]) + v * h_value(t) + b\n",
-    "    h[t - 1] = F.sigmoid(h[t - 1])\n",
-    "    y_hat = h[t - 1]\n",
+    "def ForwardPropagation(input_values, timestamp, hidden_states, initial_hidden_state, v, bias, y_true, weights):\n",
+    "    h_value = lambda timestamp: initial_hidden_state if timestamp == 1 else hidden_states[0]\n",
+    "    hidden_states[timestamp - 1] = torch.matmul(weights.T, input_values[timestamp - 1]) + v * h_value(timestamp) + bias\n",
+    "    hidden_states[timestamp - 1] = F.sigmoid(hidden_states[timestamp - 1])\n",
+    "    y_hat = hidden_states[timestamp - 1]\n",
     "    # Compute the loss\n",
-    "    loss = binary_cross_entropy(y_true[t - 1], y_hat)\n",
+    "    loss = BCE_Loss(y_true[timestamp - 1], y_hat)\n",
     "    \n",
     "    return y_hat, loss\n",
     "\n",
     "\n",
     "# Implement the backward pass of a RNN\n",
-    "def backward_pass(x, t, h_0, h, y_true, y_hat):\n",
+    "def BackPropagation(input_values, timestamps, hidden_states, initial_hidden_state, y_true, y_hat):\n",
     "    # Compute the gradient of the loss with respect to y_hat\n",
-    "    grad_y_hat = -1 * (y_true[t - 1] / y_hat - (1 - y_true[t - 1]) / (1 - y_hat))\n",
+    "    grad_y_hat = -1 * (y_true[timestamps - 1] / y_hat - (1 - y_true[timestamps - 1]) / (1 - y_hat))\n",
     "    # Compute the gradient of the loss with respect to h\n",
     "    grad_h = grad_y_hat * (y_hat * (1 - y_hat))\n",
     "    # Compute the gradient of the loss with respect to w\n",
-    "    grad_w = grad_h * x[t - 1]\n",
+    "    grad_w = grad_h * input_values[timestamps - 1]\n",
     "    # Compute the gradient of the loss with respect to b\n",
     "    grad_b = grad_h * 1\n",
     "    # Compute the gradient of the loss with respect to v\n",
-    "    h_value = lambda t: h_0 if t == 1 else h[0]\n",
-    "    grad_v = grad_h * h_value(t)\n",
+    "    h_value = lambda timestamps: initial_hidden_state if timestamps == 1 else hidden_states[0]\n",
+    "    grad_v = grad_h * h_value(timestamps)\n",
     "\n",
     "    return grad_w, grad_b, grad_v\n",
     "\n",
     "\n",
-    "def update_parameters(w, grad_w, b, grad_b, v, grad_v, learning_rate):\n",
-    "    w_new = w - learning_rate * grad_w\n",
-    "    b_new = b - learning_rate * grad_b\n",
+    "def StochasticGradientDescent(weights, grad_w, bias, grad_b, v, grad_v, learning_rate):\n",
+    "    w_new = weights - learning_rate * grad_w\n",
+    "    b_new = bias - learning_rate * grad_b\n",
     "    v_new = v - learning_rate * grad_v\n",
     "    return w_new, b_new, v_new\n",
     "\n",
@@ -87,25 +87,31 @@
     "        for t in range(1, 3):\n",
     "            h_0 = 0\n",
     "            # Forward pass\n",
-    "            y_hat, loss = forward_pass(x = x, \n",
-    "                                       t = t, \n",
-    "                                       h = h, \n",
-    "                                       h_0 = h_0, \n",
-    "                                       v = v, \n",
-    "                                       b = b, \n",
-    "                                       y_true = y_true, \n",
-    "                                       w = w)\n",
+    "            y_hat, loss = ForwardPropagation(input_values = x, \n",
+    "                                             timestamp = t, \n",
+    "                                             hidden_states = h, \n",
+    "                                             initial_hidden_state = h_0, \n",
+    "                                             v = v, \n",
+    "                                             bias= b, \n",
+    "                                             y_true = y_true, \n",
+    "                                             weights = w)\n",
     "            # Compute loss\n",
-    "            loss = binary_cross_entropy(y_true[t - 1], y_hat)\n",
+    "            loss = BCE_Loss(y_true[t - 1], y_hat)\n",
     "            # Backward pass\n",
-    "            grad_w, grad_b, grad_v = backward_pass(x = x, \n",
-    "                                                   t = t, \n",
-    "                                                   h_0 = h_0,\n",
-    "                                                   h = h,\n",
-    "                                                   y_true = y_true, \n",
-    "                                                   y_hat = y_hat)\n",
+    "            grad_w, grad_b, grad_v = BackPropagation(input_values = x, \n",
+    "                                                     timestamps = t, \n",
+    "                                                     hidden_states = h,\n",
+    "                                                     initial_hidden_state = h_0,\n",
+    "                                                     y_true = y_true, \n",
+    "                                                     y_hat = y_hat)\n",
     "            # Update weights and bias\n",
-    "            w, b, v = update_parameters(w, grad_w, b, grad_b, v, grad_v, learning_rate)\n",
+    "            w, b, v = StochasticGradientDescent(weights = w, \n",
+    "                                                grad_w = grad_w, \n",
+    "                                                bias = b, \n",
+    "                                                grad_b = grad_b, \n",
+    "                                                v = v, \n",
+    "                                                grad_v = grad_v, \n",
+    "                                                learning_rate = learning_rate)\n",
     "            loss_values.append(loss)\n",
     "\n",
     "        # Store the loss of the last batch of the epoch    \n",
@@ -118,12 +124,16 @@
     "    return cost_values, w, b, v\n",
     "\n",
     "\n",
-    "def PlotCost(cost_values):\n",
+    "def SimpleRNN_Results(cost_values, weights, bias, v):\n",
     "    plt.plot(cost_values)\n",
     "    plt.title('SimpleRNN training results with SGD (unit batch size)')\n",
     "    plt.xlabel('Epoch')\n",
     "    plt.ylabel('Cost')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "    print(\"The final weight vector is:     {}\".format(weights))\n",
+    "    print(\"The final bias vector is:       {}\".format(bias))\n",
+    "    print(\"The final scalar v vector is:   {}\".format(v))"
    ]
   },
   {
@@ -176,7 +186,14 @@
     }
    ],
    "source": [
-    "y_hat, loss = forward_pass(x = x, t = 1, h = h, h_0 = h_0, v = v, b = b, y_true = y_true, w = w)\n",
+    "y_hat, loss = ForwardPropagation(input_values = x, \n",
+    "                                 timestamp = 1, \n",
+    "                                 hidden_states = h, \n",
+    "                                 initial_hidden_state = h_0, \n",
+    "                                 v = v, \n",
+    "                                 bias = b, \n",
+    "                                 y_true = y_true, \n",
+    "                                 weights = w)\n",
     "\n",
     "# print the results\n",
     "print(\"The predicted value is y_hat = {}\".format(y_hat))\n",
@@ -209,10 +226,15 @@
     }
    ],
    "source": [
-    "grad_w, grad_b, grad_v = backward_pass(x = x, t = 1, h_0 = h_0, h = h, y_true = y_true, y_hat = y_hat)\n",
+    "grad_w, grad_b, grad_v = BackPropagation(input_values = x, \n",
+    "                                         timestamps = 1, \n",
+    "                                         hidden_states = h, \n",
+    "                                         initial_hidden_state = h_0, \n",
+    "                                         y_true = y_true, \n",
+    "                                         y_hat = y_hat)\n",
     "\n",
     "learning_rate = 0.1\n",
-    "w_new, b_new, v_new = update_parameters(w, grad_w, b, grad_b, v, grad_v, learning_rate)\n",
+    "w_new, b_new, v_new = StochasticGradientDescent(w, grad_w, b, grad_b, v, grad_v, learning_rate)\n",
     "\n",
     "# print the results\n",
     "print(\"The new weight vector is {}\".format(w_new))"
@@ -298,10 +320,7 @@
     }
    ],
    "source": [
-    "PlotCost(costs)\n",
-    "print(\"The final weight vector is:     {}\".format(w))\n",
-    "print(\"The final bias vector is:       {}\".format(b))\n",
-    "print(\"The final scalar v vector is:   {}\".format(v))"
+    "SimpleRNN_Results(cost_values = costs, weights = w, bias = b, v = v)"
    ]
   }
  ],
