All parameters's names normalized

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -42,19 +42,22 @@
     "    return -1 * (y_true * torch.log(y_hat) + (1 - y_true) * torch.log(1 - y_hat))\n",
     "\n",
     "\n",
-    "def ForwardPropagation(input_values, timestamp, hidden_states, initial_hidden_state, v, bias, y_true, weights):\n",
+    "def ForwardPropagation(input_values, timestamp, hidden_states, initial_hidden_state, v, bias, weights):\n",
+    "\n",
     "    h_value = lambda timestamp: initial_hidden_state if timestamp == 1 else hidden_states[0]\n",
+    "    # Compute the hidden state\n",
     "    hidden_states[timestamp - 1] = torch.matmul(weights.T, input_values[timestamp - 1]) + v * h_value(timestamp) + bias\n",
+    "    # Compute the activation values\n",
     "    hidden_states[timestamp - 1] = F.sigmoid(hidden_states[timestamp - 1])\n",
+    "    # Compute the prediction considering the current hidden state\n",
     "    y_hat = hidden_states[timestamp - 1]\n",
-    "    # Compute the loss\n",
-    "    loss = BCE_Loss(y_true[timestamp - 1], y_hat)\n",
     "    \n",
-    "    return y_hat, loss\n",
+    "    return y_hat\n",
     "\n",
     "\n",
     "# Implement the backward pass of a RNN\n",
     "def BackPropagation(input_values, timestamps, hidden_states, initial_hidden_state, y_true, y_hat):\n",
+    "\n",
     "    # Compute the gradient of the loss with respect to y_hat\n",
     "    grad_y_hat = -1 * (y_true[timestamps - 1] / y_hat - (1 - y_true[timestamps - 1]) / (1 - y_hat))\n",
     "    # Compute the gradient of the loss with respect to h\n",
@@ -71,6 +74,7 @@
     "\n",
     "\n",
     "def StochasticGradientDescent(weights, grad_w, bias, grad_b, v, grad_v, learning_rate):\n",
+    "\n",
     "    w_new = weights - learning_rate * grad_w\n",
     "    b_new = bias - learning_rate * grad_b\n",
     "    v_new = v - learning_rate * grad_v\n",
@@ -78,40 +82,40 @@
     "\n",
     "\n",
     "# Implement a simple RNN that only updates the weights\n",
-    "def SimpleRNN(x, y_true, w, v, b, learning_rate = 0.1, epochs = 1000):\n",
+    "def SimpleRNN(input_values, y_true, weights, v, bias, learning_rate = 0.1, epochs = 1000):\n",
     "    # Initialize hidden state\n",
-    "    h = torch.zeros(2)\n",
+    "    hidden_states = torch.zeros(2)\n",
+    "    h_0 = 0\n",
     "    cost_values = []\n",
     "    for i in range(epochs):\n",
     "        loss_values = []\n",
     "        for t in range(1, 3):\n",
-    "            h_0 = 0\n",
     "            # Forward pass\n",
-    "            y_hat, loss = ForwardPropagation(input_values = x, \n",
-    "                                             timestamp = t, \n",
-    "                                             hidden_states = h, \n",
-    "                                             initial_hidden_state = h_0, \n",
-    "                                             v = v, \n",
-    "                                             bias= b, \n",
-    "                                             y_true = y_true, \n",
-    "                                             weights = w)\n",
+    "            y_hat = ForwardPropagation(input_values = input_values, \n",
+    "                                       timestamp = t, \n",
+    "                                       hidden_states = hidden_states, \n",
+    "                                       initial_hidden_state = h_0, \n",
+    "                                       v = v, \n",
+    "                                       bias = bias, \n",
+    "                                       weights = weights)\n",
     "            # Compute loss\n",
-    "            loss = BCE_Loss(y_true[t - 1], y_hat)\n",
+    "            loss = BCE_Loss(y_true = y_true[t - 1], \n",
+    "                            y_hat = y_hat)\n",
     "            # Backward pass\n",
-    "            grad_w, grad_b, grad_v = BackPropagation(input_values = x, \n",
+    "            grad_w, grad_b, grad_v = BackPropagation(input_values = input_values, \n",
     "                                                     timestamps = t, \n",
-    "                                                     hidden_states = h,\n",
+    "                                                     hidden_states = hidden_states,\n",
     "                                                     initial_hidden_state = h_0,\n",
     "                                                     y_true = y_true, \n",
     "                                                     y_hat = y_hat)\n",
     "            # Update weights and bias\n",
-    "            w, b, v = StochasticGradientDescent(weights = w, \n",
-    "                                                grad_w = grad_w, \n",
-    "                                                bias = b, \n",
-    "                                                grad_b = grad_b, \n",
-    "                                                v = v, \n",
-    "                                                grad_v = grad_v, \n",
-    "                                                learning_rate = learning_rate)\n",
+    "            weights, bias, v = StochasticGradientDescent(weights = weights, \n",
+    "                                                         grad_w = grad_w, \n",
+    "                                                         bias = bias, \n",
+    "                                                         grad_b = grad_b, \n",
+    "                                                         v = v, \n",
+    "                                                         grad_v = grad_v, \n",
+    "                                                         learning_rate = learning_rate)\n",
     "            loss_values.append(loss)\n",
     "\n",
     "        # Store the loss of the last batch of the epoch    \n",
@@ -121,10 +125,11 @@
     "            print(\"Epoch {}: cost = {}\".format(i, cost_values[-1]))\n",
     "\n",
     "    print(\"Epoch {}: cost = {}\".format(i + 1, cost_values[-1]))\n",
-    "    return cost_values, w, b, v\n",
+    "    return cost_values, weights, bias, v\n",
     "\n",
     "\n",
     "def SimpleRNN_Results(cost_values, weights, bias, v):\n",
+    "    \n",
     "    plt.plot(cost_values)\n",
     "    plt.title('SimpleRNN training results with SGD (unit batch size)')\n",
     "    plt.xlabel('Epoch')\n",
@@ -186,14 +191,16 @@
     }
    ],
    "source": [
-    "y_hat, loss = ForwardPropagation(input_values = x, \n",
-    "                                 timestamp = 1, \n",
-    "                                 hidden_states = h, \n",
-    "                                 initial_hidden_state = h_0, \n",
-    "                                 v = v, \n",
-    "                                 bias = b, \n",
-    "                                 y_true = y_true, \n",
-    "                                 weights = w)\n",
+    "y_hat = ForwardPropagation(input_values = x, \n",
+    "                           timestamp = 1, \n",
+    "                           hidden_states = h, \n",
+    "                           initial_hidden_state = h_0, \n",
+    "                           v = v, \n",
+    "                           bias = b, \n",
+    "                           weights = w)\n",
+    "\n",
+    "loss = BCE_Loss(y_true = y_true[0], \n",
+    "                y_hat = y_hat)\n",
     "\n",
     "# print the results\n",
     "print(\"The predicted value is y_hat = {}\".format(y_hat))\n",
@@ -291,7 +298,13 @@
     }
    ],
    "source": [
-    "costs, w, b, v = SimpleRNN(x, y_true, w, v, b, learning_rate = 0.5, epochs = 500)"
+    "costs, w, b, v = SimpleRNN(input_values = x, \n",
+    "                           y_true = y_true, \n",
+    "                           weights = w, \n",
+    "                           v = v, \n",
+    "                           bias = b, \n",
+    "                           learning_rate = 0.5, \n",
+    "                           epochs = 500)"
    ]
   },
   {
