PDF of assignment 1 updated

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "    # Compute the gradient of the loss with respect to y_hat\n",
     "    grad_y_hat = -1 * (y_true[timestamps - 1] / y_hat - (1 - y_true[timestamps - 1]) / (1 - y_hat))\n",
-    "    # Compute the gradient of the loss with respect to h\n",
+    "    # Compute the gradient of the loss with respect to h (derivative of sigmoid)\n",
     "    grad_h = grad_y_hat * (y_hat * (1 - y_hat))\n",
     "    # Compute the gradient of the loss with respect to w\n",
     "    grad_w = grad_h * input_values[timestamps - 1]\n",
