Written answers of question 2, from A1, added

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -154,13 +154,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([[0.3, -0.2], \n",
+    "input_values = torch.tensor([[0.3, -0.2], \n",
     "                  [0.1, 0.1]])\n",
-    "w = torch.tensor([1.0, -1.0])\n",
+    "weights = torch.tensor([1.0, -1.0])\n",
     "v = -1\n",
-    "b = 0\n",
-    "h = torch.tensor([0.0, 0.0])\n",
-    "h_0 = torch.tensor([0.0])\n",
+    "bias = 0\n",
+    "hidden_states = torch.tensor([0.0, 0.0])\n",
+    "initial_hidden_state = torch.tensor([0.0])\n",
     "y_true = torch.tensor([1, 0])"
    ]
   },
@@ -191,13 +191,13 @@
     }
    ],
    "source": [
-    "y_hat = ForwardPropagation(input_values = x, \n",
+    "y_hat = ForwardPropagation(input_values = input_values, \n",
     "                           timestamp = 1, \n",
-    "                           hidden_states = h, \n",
-    "                           initial_hidden_state = h_0, \n",
+    "                           hidden_states = hidden_states, \n",
+    "                           initial_hidden_state = initial_hidden_state, \n",
     "                           v = v, \n",
-    "                           bias = b, \n",
-    "                           weights = w)\n",
+    "                           bias = bias, \n",
+    "                           weights = weights)\n",
     "\n",
     "loss = BCE_Loss(y_true = y_true[0], \n",
     "                y_hat = y_hat)\n",
@@ -233,15 +233,15 @@
     }
    ],
    "source": [
-    "grad_w, grad_b, grad_v = BackPropagation(input_values = x, \n",
+    "grad_w, grad_b, grad_v = BackPropagation(input_values = input_values, \n",
     "                                         timestamps = 1, \n",
-    "                                         hidden_states = h, \n",
-    "                                         initial_hidden_state = h_0, \n",
+    "                                         hidden_states = hidden_states, \n",
+    "                                         initial_hidden_state = initial_hidden_state, \n",
     "                                         y_true = y_true, \n",
     "                                         y_hat = y_hat)\n",
     "\n",
     "learning_rate = 0.1\n",
-    "w_new, b_new, v_new = StochasticGradientDescent(w, grad_w, b, grad_b, v, grad_v, learning_rate)\n",
+    "w_new, b_new, v_new = StochasticGradientDescent(weights, grad_w, bias, grad_b, v, grad_v, learning_rate)\n",
     "\n",
     "# print the results\n",
     "print(\"The new weight vector is {}\".format(w_new))"
@@ -298,11 +298,11 @@
     }
    ],
    "source": [
-    "costs, w, b, v = SimpleRNN(input_values = x, \n",
+    "costs, weights, bias, v = SimpleRNN(input_values = input_values, \n",
     "                           y_true = y_true, \n",
-    "                           weights = w, \n",
+    "                           weights = weights, \n",
     "                           v = v, \n",
-    "                           bias = b, \n",
+    "                           bias = bias, \n",
     "                           learning_rate = 0.5, \n",
     "                           epochs = 500)"
    ]
@@ -333,7 +333,60 @@
     }
    ],
    "source": [
-    "SimpleRNN_Results(cost_values = costs, weights = w, bias = b, v = v)"
+    "SimpleRNN_Results(cost_values = costs, weights = weights, bias = bias, v = v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 2, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Investigate what teacher forcing is and explain it in your own words.</h2>\n",
+    "<p>Teacher forcing is a technique that can be implemented in a standard RNN in order to make it converge much faster! In a vanilla many-to-many RNN, where for each input we have an output, what happens is that the prediction for a certain input (or timestamp) is equal to the hidden state computed for that input; now, for that hidden state to be calculated, the current hidden state uses the hidden state from the previous input data. That being said, we can see that the prediction for a current timestamp (hidden state from current timestamp) is used as input for the computation of the next hidden state, but because a prediction never hits the mark perfectly, inaccurate data is passed to the next timestamp, and through the RNN. So, in order to help the RNN learn faster and with more accurate data, teacher forcing is used, which just means that we use the target from the previous timestamp as input to the following timestamp, instead of the previous hidden state.\n",
+    "\n",
+    "So, considering the equation for h(t) from question 2 a), instead of the hidden state equation being $\\overbrace{h(t) = \\sigma(w^Tx + vh(t - 1) + b)}^{\\text{Standard RNN}}$, with teacher forcing it would be $\\overbrace{h(t) = \\sigma(w^Tx + vy(t - 1) + b)}^{\\text{Standard RNN w/teacher forcing}}$</p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## iii)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Which of the strategies do you expect to yield a model with better generalization? Explain your answer.</h2>\n",
+    "<p>The strategy that enables to model to generalize better for unseen sequences would the a RNN without teacher forcing. Altough teacher forcing enables a RNN to converge quicker to a local optimum, the disadvantage is that when facing test data, the model has no way of knowing what is the ground truth for that particular time step or sequence, and therefore underperform with a high variance (or overfit). So, if a RNN w/teacher forcing is more likely to underperform when faced with test data than a RNN that learns with only what it knows, then a model without teacher forcing generalizes better!</p>"
    ]
   }
  ],
