--- a/A1_P1.ipynb
+++ b/A1_P1.ipynb
@@ -90,6 +90,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# Ignore UserWarning\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def BCE_Loss(y_true, y_hat):\n",
+    "    if y_true == y_hat:\n",
+    "        return torch.tensor(0.)\n",
+    "    return -1 * (y_true * torch.log(y_hat) + (1 - y_true) * torch.log(1 - y_hat))\n",
+    "\n",
+    "\n",
+    "def ForwardPass(X, W, b = 0):\n",
+    "\n",
+    "    z1 = torch.matmul(X, W[0].T) + b\n",
+    "    a1 = F.relu(z1)\n",
+    "\n",
+    "    z2 = torch.matmul(a1, W[1].T) + b\n",
+    "    a2 = F.leaky_relu(z2, negative_slope = 0.01)\n",
+    "\n",
+    "    z3 = torch.matmul(a2, W[2].T) + b\n",
+    "    a3 = F.sigmoid(z3)\n",
+    "\n",
+    "    return a3, a2, a1\n",
+    "\n",
+    "\n",
+    "def BackwardPass(X, a1, a2, a3, y_true, W):\n",
+    "\n",
+    "    # Backpropagation\n",
+    "    dL_da3 = -1 * (y_true / a3 - (1 - y_true) / (1 - a3)) if y_true != a3 else torch.tensor([0.])\n",
+    "    print(\"dL_da3: \", dL_da3)\n",
+    "    dL_dz3 = dL_da3 * (a3 * (1 - a3))\n",
+    "    print(\"dL_dz3: \", dL_dz3)\n",
+    "    dL_dW3 = torch.matmul(dL_dz3, a2.T)\n",
+    "    print(\"dL_dW3: \", dL_dW3)\n",
+    "\n",
+    "    # Backpropagate through the second hidden layer\n",
+    "    dL_da2 = torch.matmul(dL_dz3, W[1].T)\n",
+    "    print(\"dL_da2: \", dL_da2)\n",
+    "    dL_dz2 = torch.where(a2 >= 0, dL_da2, 0.01 * dL_da2)\n",
+    "    print(\"dL_dz2: \", dL_dz2)\n",
+    "    dL_dW2 = torch.matmul(dL_dz2, a1.T)\n",
+    "    print(\"dL_dW2: \", dL_dW2)\n",
+    "    \n",
+    "    # Backpropagate through the first hidden layer\n",
+    "    dL_da1 = torch.matmul(dL_dz2, W[0].T)\n",
+    "    print(\"dL_da1: \", dL_da1)\n",
+    "    dL_dz1 = torch.where(a1 >= 0, dL_da2, 0.0)\n",
+    "    print(\"dL_dz1: \", dL_dz1)\n",
+    "    dL_dW1 = torch.matmul(dL_dz1, X.T)\n",
+    "    print(\"dL_dW1: \", dL_dW1)\n",
+    "\n",
+    "    return dL_dW1, dL_dW2, dL_dW3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_values = torch.tensor([5., 4., 1., 3., 2.])\n",
+    "y_true = torch.tensor(1.)\n",
+    "\n",
+    "w1 = torch.tensor([[2., 2., 2., 2., 2.],\n",
+    "                   [2., 2., 2., 2., 2.],\n",
+    "                   [2., 2., 2., 2., 2.]])\n",
+    "\n",
+    "w2 = torch.tensor([[2., 2., 2.],\n",
+    "                   [2., 2., 2.]])\n",
+    "\n",
+    "w3 = torch.tensor([2., 2.])\n",
+    "\n",
+    "W = list([w1, w2, w3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Output (A3): 1.0\n",
+      "Binary Cross-Entropy Loss: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3, a2, a1 = ForwardPass(input_values, W)\n",
+    "loss = BCE_Loss(y_true, a3)\n",
+    "\n",
+    "\n",
+    "print(\"Predicted Output (A3):\", a3.item())\n",
+    "print(\"Binary Cross-Entropy Loss:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dL_da3:  tensor([0.])\n",
+      "dL_dz3:  tensor([0.])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "inconsistent tensor size, expected tensor [1] and src [2] to have the same number of elements, but got 1 and 2 elements respectively",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dL_dW1, dL_dW2, dL_dW3 \u001b[39m=\u001b[39m BackwardPass(input_values, a1, a2, a3, y_true, W)\n",
+      "\u001b[1;32m/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m dL_dz3 \u001b[39m=\u001b[39m dL_da3 \u001b[39m*\u001b[39m (a3 \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m a3))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdL_dz3: \u001b[39m\u001b[39m\"\u001b[39m, dL_dz3)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m dL_dW3 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mmatmul(dL_dz3, a2\u001b[39m.\u001b[39;49mT)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdL_dW3: \u001b[39m\u001b[39m\"\u001b[39m, dL_dW3)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m# Backpropagate through the second hidden layer\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: inconsistent tensor size, expected tensor [1] and src [2] to have the same number of elements, but got 1 and 2 elements respectively"
+     ]
+    }
+   ],
+   "source": [
+    "dL_dW1, dL_dW2, dL_dW3 = BackwardPass(input_values, a1, a2, a3, y_true, W)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "2428167e",
    "metadata": {},
@@ -203,7 +347,6 @@
     "        x = x.view(-1, 784)  # Flatten the input\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
-    "        \n",
     "        # ver leaky relu para segunda hidden layer\n",
     "        \n",
     "        x = self.fc3(x)\n",
@@ -472,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
