--- a/A1_P1.ipynb
+++ b/A1_P1.ipynb
@@ -95,7 +95,6 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
     "# Ignore UserWarning\n",
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,29 +132,29 @@
     "\n",
     "    # Backpropagation\n",
     "    dL_da3 = -1 * (y_true / a3 - (1 - y_true) / (1 - a3)) if y_true != a3 else torch.tensor([0.])\n",
-    "    print(\"dL_da3: \", dL_da3)\n",
     "    dL_dz3 = dL_da3 * (a3 * (1 - a3))\n",
-    "    print(\"dL_dz3: \", dL_dz3)\n",
-    "    dL_dW3 = torch.matmul(dL_dz3, a2.T)\n",
-    "    print(\"dL_dW3: \", dL_dW3)\n",
+    "    dL_dW3 = torch.matmul(dL_dz3.T, a2)\n",
     "\n",
     "    # Backpropagate through the second hidden layer\n",
-    "    dL_da2 = torch.matmul(dL_dz3, W[1].T)\n",
-    "    print(\"dL_da2: \", dL_da2)\n",
+    "    dL_da2 = torch.matmul(dL_dz3, W[2])\n",
     "    dL_dz2 = torch.where(a2 >= 0, dL_da2, 0.01 * dL_da2)\n",
-    "    print(\"dL_dz2: \", dL_dz2)\n",
-    "    dL_dW2 = torch.matmul(dL_dz2, a1.T)\n",
-    "    print(\"dL_dW2: \", dL_dW2)\n",
-    "    \n",
-    "    # Backpropagate through the first hidden layer\n",
-    "    dL_da1 = torch.matmul(dL_dz2, W[0].T)\n",
-    "    print(\"dL_da1: \", dL_da1)\n",
-    "    dL_dz1 = torch.where(a1 >= 0, dL_da2, 0.0)\n",
-    "    print(\"dL_dz1: \", dL_dz1)\n",
-    "    dL_dW1 = torch.matmul(dL_dz1, X.T)\n",
-    "    print(\"dL_dW1: \", dL_dW1)\n",
+    "    dL_dW2 = torch.matmul(dL_dz2.T, a1)\n",
     "\n",
-    "    return dL_dW1, dL_dW2, dL_dW3"
+    "    # Backpropagate through the first hidden layer\n",
+    "    dL_da1 = torch.matmul(dL_dz2, W[1])\n",
+    "    dL_dz1 = torch.where(a1 >= 0, dL_da1, 0.0 * dL_da1)\n",
+    "    dL_dW1 = torch.matmul(dL_dz1.T, X)\n",
+    "\n",
+    "    return dL_dW1, dL_dW2, dL_dW3\n",
+    "\n",
+    "\n",
+    "def StochasticGradintDescent(dL_dW1, dL_dW2, dL_dW3, W, lr):\n",
+    "    # Update weights\n",
+    "    W[0] -= lr * dL_dW1\n",
+    "    W[1] -= lr * dL_dW2\n",
+    "    W[2] -= lr * dL_dW3\n",
+    "\n",
+    "    return W"
    ]
   },
   {
@@ -164,8 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_values = torch.tensor([5., 4., 1., 3., 2.])\n",
-    "y_true = torch.tensor(1.)\n",
+    "input_values = torch.tensor([[5., 4., 1., 3., 2.]])\n",
+    "\n",
+    "y_true = torch.tensor([1.])\n",
     "\n",
     "w1 = torch.tensor([[2., 2., 2., 2., 2.],\n",
     "                   [2., 2., 2., 2., 2.],\n",
@@ -174,7 +174,7 @@
     "w2 = torch.tensor([[2., 2., 2.],\n",
     "                   [2., 2., 2.]])\n",
     "\n",
-    "w3 = torch.tensor([2., 2.])\n",
+    "w3 = torch.tensor([[2., 2.]])\n",
     "\n",
     "W = list([w1, w2, w3])"
    ]
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Output (A3): 1.0\n",
+      "Predicted Output (a3): 1.0\n",
       "Binary Cross-Entropy Loss: 0.0\n"
      ]
     }
@@ -198,7 +198,7 @@
     "loss = BCE_Loss(y_true, a3)\n",
     "\n",
     "\n",
-    "print(\"Predicted Output (A3):\", a3.item())\n",
+    "print(\"Predicted Output (a3):\", a3.item())\n",
     "print(\"Binary Cross-Entropy Loss:\", loss.item())"
    ]
   },
@@ -211,71 +211,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dL_da3:  tensor([0.])\n",
-      "dL_dz3:  tensor([0.])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "inconsistent tensor size, expected tensor [1] and src [2] to have the same number of elements, but got 1 and 2 elements respectively",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dL_dW1, dL_dW2, dL_dW3 \u001b[39m=\u001b[39m BackwardPass(input_values, a1, a2, a3, y_true, W)\n",
-      "\u001b[1;32m/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m dL_dz3 \u001b[39m=\u001b[39m dL_da3 \u001b[39m*\u001b[39m (a3 \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m a3))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdL_dz3: \u001b[39m\u001b[39m\"\u001b[39m, dL_dz3)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m dL_dW3 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mmatmul(dL_dz3, a2\u001b[39m.\u001b[39;49mT)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdL_dW3: \u001b[39m\u001b[39m\"\u001b[39m, dL_dW3)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/luish/Desktop/Carreira/AcademicPath/EnsinoSuperior/Mestrados/DataScienceEngineeringFEUP/UnidadesCurriculares/2ndYear/1stSemester/AdvancedTopicsOnMachineLearning/project/TAAC-Project/A1_P1.ipynb#X43sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m# Backpropagate through the second hidden layer\u001b[39;00m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: inconsistent tensor size, expected tensor [1] and src [2] to have the same number of elements, but got 1 and 2 elements respectively"
+      "dL_dW1: tensor([[0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0.]])\n",
+      "dL_dW2: tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n",
+      "dL_dW3: tensor([[0., 0.]])\n"
      ]
     }
    ],
    "source": [
-    "dL_dW1, dL_dW2, dL_dW3 = BackwardPass(input_values, a1, a2, a3, y_true, W)"
+    "dL_dW1, dL_dW2, dL_dW3 = BackwardPass(input_values, a1, a2, a3, y_true, W)\n",
+    "\n",
+    "print(\"dL_dW1:\", dL_dW1)\n",
+    "print(\"dL_dW2:\", dL_dW2)\n",
+    "print(\"dL_dW3:\", dL_dW3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2428167e",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Output (A3): [0.98069799]\n",
-      "Binary Cross-Entropy Loss: [0.01949073]\n"
+      "Updated W1: tensor([[2., 2., 2., 2., 2.],\n",
+      "        [2., 2., 2., 2., 2.],\n",
+      "        [2., 2., 2., 2., 2.]])\n",
+      "Updated W2: tensor([[2., 2., 2.],\n",
+      "        [2., 2., 2.]])\n",
+      "Updated W3: tensor([[2., 2.]])\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "W = StochasticGradintDescent(dL_dW1, dL_dW2, dL_dW3, W, lr = 0.2)\n",
     "\n",
-    "# Input values\n",
-    "input_values = np.array([5, 4, 1, 3, 2])\n",
-    "\n",
-    "# Initialize weights with 2\n",
-    "W1 = np.array([[2, 2, 2, 2, 2], [2, 2, 2, 2, 2]])  # Adjust the dimensions as per your architecture\n",
-    "W2 = np.array([[2, 2], [2, 2]])  # Adjust the dimensions as per your architecture\n",
-    "W3 = np.array([[2], [2]])  # Adjust the dimensions as per your architecture\n",
-    "\n",
-    "# Perform the forward pass\n",
-    "Z1 = np.dot(W1, input_values)\n",
-    "A1 = 1 / (1 + np.exp(-Z1))  # Using sigmoid activation\n",
-    "\n",
-    "Z2 = np.dot(W2, A1)\n",
-    "A2 = 1 / (1 + np.exp(-Z2))\n",
-    "\n",
-    "Z3 = np.dot(W3.T, A2)\n",
-    "A3 = 1 / (1 + np.exp(-Z3))  # Final output of the network\n",
-    "\n",
-    "# True target (assuming a binary classification problem)\n",
-    "y_true = 1  # Replace with your actual target value\n",
-    "\n",
-    "# Calculate Binary Cross-Entropy Loss\n",
-    "loss = - (y_true * np.log(A3) + (1 - y_true) * np.log(1 - A3))\n",
-    "\n",
-    "print(\"Predicted Output (A3):\", A3)\n",
-    "print(\"Binary Cross-Entropy Loss:\", loss)\n"
+    "print(\"Updated W1:\", W[0])\n",
+    "print(\"Updated W2:\", W[1])\n",
+    "print(\"Updated W3:\", W[2])"
    ]
   },
   {
