Notebook better organized

--- a/A1_P1.ipynb
+++ b/A1_P1.ipynb
@@ -2,10 +2,100 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Libraries & Custom functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# Ignore UserWarning\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def BCE_Loss(y_true, y_hat):\n",
+    "    if y_true == y_hat:\n",
+    "        return torch.tensor(0.)\n",
+    "    \n",
+    "    return -1 * (y_true * torch.log(y_hat) + (1 - y_true) * torch.log(1 - y_hat))\n",
+    "\n",
+    "\n",
+    "def ForwardPass(X, W, b = 0):\n",
+    "\n",
+    "    z1 = torch.matmul(X, W[0].T) + b\n",
+    "    a1 = F.relu(z1)\n",
+    "\n",
+    "    z2 = torch.matmul(a1, W[1].T) + b\n",
+    "    a2 = F.leaky_relu(z2, negative_slope = 0.01)\n",
+    "\n",
+    "    z3 = torch.matmul(a2, W[2].T) + b\n",
+    "    a3 = F.sigmoid(z3)\n",
+    "\n",
+    "    return a3, a2, a1\n",
+    "\n",
+    "\n",
+    "def BackwardPass(X, a1, a2, a3, y_true, W):\n",
+    "\n",
+    "    # Partial derivative of the loss function with respect to the prediction\n",
+    "    dL_da3 = -1 * (y_true / a3 - (1 - y_true) / (1 - a3)) if y_true != a3 else torch.tensor([0.])\n",
+    "    # Partial derivative of the loss function with respect to z3, using the sigmoid derivative\n",
+    "    dL_dz3 = dL_da3 * (a3 * (1 - a3))\n",
+    "    # Partial derivative of the loss function with respect to the weights of the connections between the second hidden layer and the output layer\n",
+    "    dL_dW3 = torch.matmul(dL_dz3.T, a2)\n",
+    "\n",
+    "    # Partial derivative of the loss function with respect to the activation values from the second hidden layer\n",
+    "    dL_da2 = torch.matmul(dL_dz3, W[2])\n",
+    "    # Partial derivative of the loss function with respect to z2, using the Leaky ReLU derivative\n",
+    "    dL_dz2 = torch.where(a2 >= 0, dL_da2, 0.01 * dL_da2)\n",
+    "    # Partial derivative of the loss function with respect to the weights of the connections between the first and second hidden layers\n",
+    "    dL_dW2 = torch.matmul(dL_dz2.T, a1)\n",
+    "\n",
+    "    # Partial derivative of the loss function with respect to the activation values from the first hidden layer\n",
+    "    dL_da1 = torch.matmul(dL_dz2, W[1])\n",
+    "    # Partial derivative of the loss function with respect to z2, using the ReLU derivative\n",
+    "    dL_dz1 = torch.where(a1 >= 0, dL_da1, 0.0 * dL_da1)\n",
+    "    # Partial derivative of the loss function with respect to the weights of the connections between the input layer and the first hidden layers\n",
+    "    dL_dW1 = torch.matmul(dL_dz1.T, X)\n",
+    "\n",
+    "    return dL_dW1, dL_dW2, dL_dW3\n",
+    "\n",
+    "\n",
+    "def StochasticGradintDescent(dL_dW1, dL_dW2, dL_dW3, W, lr):\n",
+    "    # Update weights using SGD\n",
+    "    W[0] -= lr * dL_dW1\n",
+    "    W[1] -= lr * dL_dW2\n",
+    "    W[2] -= lr * dL_dW3\n",
+    "\n",
+    "    return W"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "639d6e4b",
    "metadata": {},
    "source": [
-    "### Question 1 (A)"
+    "## Exercise 1, a)"
    ]
   },
   {
@@ -85,76 +175,7 @@
    "id": "1cdbdc33",
    "metadata": {},
    "source": [
-    "### Question 1 (B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "# Ignore UserWarning\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def BCE_Loss(y_true, y_hat):\n",
-    "    if y_true == y_hat:\n",
-    "        return torch.tensor(0.)\n",
-    "    return -1 * (y_true * torch.log(y_hat) + (1 - y_true) * torch.log(1 - y_hat))\n",
-    "\n",
-    "\n",
-    "def ForwardPass(X, W, b = 0):\n",
-    "\n",
-    "    z1 = torch.matmul(X, W[0].T) + b\n",
-    "    a1 = F.relu(z1)\n",
-    "\n",
-    "    z2 = torch.matmul(a1, W[1].T) + b\n",
-    "    a2 = F.leaky_relu(z2, negative_slope = 0.01)\n",
-    "\n",
-    "    z3 = torch.matmul(a2, W[2].T) + b\n",
-    "    a3 = F.sigmoid(z3)\n",
-    "\n",
-    "    return a3, a2, a1\n",
-    "\n",
-    "\n",
-    "def BackwardPass(X, a1, a2, a3, y_true, W):\n",
-    "\n",
-    "    # Backpropagation\n",
-    "    dL_da3 = -1 * (y_true / a3 - (1 - y_true) / (1 - a3)) if y_true != a3 else torch.tensor([0.])\n",
-    "    dL_dz3 = dL_da3 * (a3 * (1 - a3))\n",
-    "    dL_dW3 = torch.matmul(dL_dz3.T, a2)\n",
-    "\n",
-    "    # Backpropagate through the second hidden layer\n",
-    "    dL_da2 = torch.matmul(dL_dz3, W[2])\n",
-    "    dL_dz2 = torch.where(a2 >= 0, dL_da2, 0.01 * dL_da2)\n",
-    "    dL_dW2 = torch.matmul(dL_dz2.T, a1)\n",
-    "\n",
-    "    # Backpropagate through the first hidden layer\n",
-    "    dL_da1 = torch.matmul(dL_dz2, W[1])\n",
-    "    dL_dz1 = torch.where(a1 >= 0, dL_da1, 0.0 * dL_da1)\n",
-    "    dL_dW1 = torch.matmul(dL_dz1.T, X)\n",
-    "\n",
-    "    return dL_dW1, dL_dW2, dL_dW3\n",
-    "\n",
-    "\n",
-    "def StochasticGradintDescent(dL_dW1, dL_dW2, dL_dW3, W, lr):\n",
-    "    # Update weights\n",
-    "    W[0] -= lr * dL_dW1\n",
-    "    W[1] -= lr * dL_dW2\n",
-    "    W[2] -= lr * dL_dW3\n",
-    "\n",
-    "    return W"
+    "## Exercise 1, b)"
    ]
   },
   {
@@ -189,6 +210,7 @@
      "output_type": "stream",
      "text": [
       "Predicted Output (a3): 1.0\n",
+      "Expected Output (y_true): 1.0\n",
       "Binary Cross-Entropy Loss: 0.0\n"
      ]
     }
@@ -197,8 +219,8 @@
     "a3, a2, a1 = ForwardPass(input_values, W)\n",
     "loss = BCE_Loss(y_true, a3)\n",
     "\n",
-    "\n",
     "print(\"Predicted Output (a3):\", a3.item())\n",
+    "print(\"Expected Output (y_true):\", y_true.item())\n",
     "print(\"Binary Cross-Entropy Loss:\", loss.item())"
    ]
   },
@@ -230,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +278,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>After updating your weights what do you observe? Explain why.</h2>\n",
+    "<p>After computing the loss and doing a backward pass, and given that all weights were initialized with the value 2, we can see that none of the weights changed. Tracing back the steps made, we can see that all partial derivatives with respect to all the weights have a value of 0, which corroborates the fact that none of the weight's values changed. These partial derivatives measure the weight's variation in order for the loss of the neural network to decrease. So, the question now becomes, why all partial derivatives with respect to all weights show that no variation in their values is required in order to decrease the loss? Well, that's because the loss is already at its minimum, which is zero. Looking at how the binary loss is computed, we see that both the expected value and predicted value are exactly the same value, one, meaning that our network predicted perfectly the target. So, this means that there's no more room for improvement, and that's why all partial derivatives with respect to the weights are zero, and as consequence, the weight matrices didn't change.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57464e93",
    "metadata": {},
    "source": [
@@ -263,19 +293,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e34e0fe",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://towardsdatascience.com/nothing-but-numpy-understanding-creating-binary-classification-neural-networks-with-e746423c8d5c"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "81ece54d",
    "metadata": {},
    "source": [
-    "### Question 1 (C) "
+    "## Exercise 1, c)"
    ]
   },
   {
@@ -394,7 +423,7 @@
    "id": "eeb9fcbb",
    "metadata": {},
    "source": [
-    "### Question 1 (D) "
+    "## Exercise 1, d)"
    ]
   },
   {
@@ -551,27 +580,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "837d20f7",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercise 1, e)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5e0c9fd",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3f8d23f",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
